<resources>
    <string name="app_name">SeeMeet</string>

    <!-- Common -->
    <string name="email">이메일</string>
    <string name="pw">비밀번호</string>
    <string name="login">로그인</string>
    <string name="apply">약속 신청</string>
    <string name="startSeeMeet">SeeMeet 시작하기</string>

    <!-- Login -->
    <string name="login_question">아직 회원이 아니신가요?</string>
    <string name="login_register"><u>회원가입</u></string>

    <!-- Login Main -->
    <string name="login_main_email_register"><u>이메일로 가입</u></string>
    <string name="login_main_email_login_underline"><u>이메일로 로그인</u></string>
    <string name="login_main_email_login">이메일로 로그인</string>
    <string name="login_main_info1">로그인시<hr> </hr></string>
    <string name="login_main_info2"><u>개인정보 처리방침</u><hr> </hr></string>
    <string name="login_main_info3">및<hr> </hr></string>
    <string name="login_main_info4"><u>이용약관</u></string>
    <string name="login_main_info5">에 동의합니다.</string>

    <!-- Register -->
    <string name="register_register">회원가입</string>
    <string name="register_checkpw">비밀번호 확인</string>
    <string name="register_registeredEmail">이미 등록된 이메일이에요.</string>
    <string name="register_incorrectEmail">올바른 이메일을 입력해주세요</string>
    <string name="register_lengthPassword">8자 이상의 비밀번호를 입력해주세요.</string>
    <string name="register_formatPassword">영문, 숫자, 특수문자 중 2가지 이상을 사용해주세요.</string>
    <string name="register_incorrectPassword">비밀번호가 일치하지 않아요.</string>
    <string name="register_next">다음으로</string>

    <!-- RegisterNameId -->
    <string name="register_name">이름</string>
    <string name="register_text">SeeMeet에서 사용할\n이름과 아이디를\n입력해주세요</string>
    <string name="register_hint_name">친구에게 보여질 이름을 써주세요</string>
    <string name="register_id">아이디</string>
    <string name="register_hint_id">친구를 검색하는데에 쓰여요</string>
    <string name="register_start">시작하기</string>
    <string name="register_lengthId">7자 이상 써주세요</string>
    <string name="register_numberId">숫자로만은 만들 수 없어요</string>
    <string name="register_formatId">아이디는 알파벳, 숫자, 밑줄, 마침표만 사용 가능해요</string>

    <!-- Main -->
    <string name="label_home">Home</string>
    <string name="label_apply">Apply</string>
    <string name="label_calendar">Calendar</string>

    <!-- My page -->
    <string name="mypage_login_msg">SeeMeet에서 친구와 약속을 잡아보세요!</string>
    <string name="mypage_notice">공지사항</string>
    <string name="mypage_setting">설정</string>
    <string name="mypage_push">푸시알림</string>
    <string name="mypage_terms_of_use">이용약관</string>
    <string name="mypage_privacy_policy">개인정보 정책</string>
    <string name="mypage_open_source">오픈소스</string>

    <!-- Friend -->
    <string name="friend_friend">친구</string>
    <string name="friend_search">친구 검색</string>
    <string name="friend_request">친구 요청</string>
    <string name="friend_null">등록된 친구가 없어요!\n친구를 추가해주세요</string>

    <!-- AddFriend -->
    <string name="addfriend_add">친구 추가</string>
    <string name="addfriend_null">검색 결과가 없습니다.</string>
    <string name="addfriend_id">친구 아이디</string>

    <!-- home -->
    <string name="home_drawer_open">drawer open</string>
    <string name="home_drawer_close">drawer close</string>
    <string name="home_mypage">MY PAGE</string>
    <string name="home_msg_tmp">아싸 오늘은\n 친구 만나는 날이다!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="home_reminder_coming">다가올 약속</string>
    <string name="home_reminder_no">약속이 없어요</string>

    <!--noti -->
    <string name="noti_title">약속 내역</string>
    <string name="noti_in_progress">진행 중</string>
    <string name="noti_done">완료</string>
    <string name="noti_send">보낸 요청</string>
    <string name="noti_day">일전</string>
    <string name="noti_send_msg_wait">친구</string>
    <string name="noti_send_msg_wait_num">3</string>
    <string name="noti_send_msg_wait2">명의 답변을 기다리고 있어요!</string>
    <string name="noti_receive">받은 요청</string>
    <string name="noti_receive_msg">친구의 요청에 답해보세요!</string>
    <string name="noti_in_progress2">이에요</string>
    <string name="noti_in_progress_num">6</string>
    <string name="noti_done_num">4</string>
    <string name="noti_num">건</string>
    <string name="noti_done2">되었어요</string>
    <string name="noti_confirm">약속 확정</string>
    <string name="noti_cancel">약속 취소</string>
    <string name="noti_done_title">강화도 여행</string>
    <string name="noti_in_progress_null">진행중인 약속이 없어요!</string>
    <string name="noti_done_null">완료된 약속이 없어요!</string>
    <string name="noti_done_canceled">취소된 약속</string>
    <string name="noti_delete">내역 삭제</string>
    <string name="noti_delete_content">선택한 약속내역을 삭제하시겠어요?</string>

    <!-- detail -->
    <string name="detail_delete">약속 삭제</string>
    <string name="detail_divider">|</string>
    <string name="detail_host">약속 주최자</string>

    <!-- receive -->
    <string name="receive_top_msg">새로운 초대장</string>
    <string name="receive_together_msg">나와 함께 받은 사람</string>
    <string name="receive_choice_msg">내 일정과 비교하며\n날짜를 선택해보세요!</string>
    <string name="receive_choice_msg_bold">날짜를 선택</string>
    <string name="receive_btn_yes">수락</string>
    <string name="receive_btn_no">거절</string>
    <string name="receive_choose_msg">날짜를 선택해보세요!</string>
    <string name="receive_top_who_msg">님이 보냈어요.</string>

    <!-- send -->
    <string name="send_top_msg">약속을 확정해 주세요</string>
    <string name="send_top_msg_bold">약속을 확정</string>
    <string name="send_confirm_btn">확정</string>
    <string name="send_cancel_btn">취소</string>
    <string name="send_content_msg">보낸 신청 내용</string>
    <string name="send_dialog_check3">답변하지 않은 친구가 있어요.\n확정할까요?</string>
    <string name="send_dialog_check2">만날 수 없는 친구가 있어요.\n확정할까요?</string>
    <string name="send_dialog_check1">약속을 확정하시겠어요?</string>
    <string name="send_dialog_send">보내기</string>
    <string name="send_confirm_msg">확정 날짜</string>
    <string name="send_cancel_msg">약속 취소</string>
    <string name="send_cancel_content">약속을 취소하시겠어요?</string>
    <string name="send_cancel_yes">예</string>
    <string name="send_cancel_no">아니오</string>
    <string name="send_reject">불참 &#124; </string>

    <string name="time_start_end">%s ~ %s</string>

    <!-- first_apply -->
    <string name="first_apply_choose_friend">약속 신청할</string>
    <string name="first_apply_choose_friend2">&#160;친구</string>
    <string name="first_apply_choose_friend3">를 선택하세요</string>
    <string name="first_apply_receive_friend">받는 사람 : </string>
    <string name="first_apply_write_content">약속의</string>
    <string name="first_apply_write_content2">&#160;내용</string>
    <string name="first_apply_write_content3">을 작성하세요</string>
    <string name="first_apply_title">제목</string>
    <string name="first_apply_detail">약속 상세 내용</string>
    <string name="first_apply_next">다음</string>

    <!-- apply Dialog -->
    <string name="apply_dialog_goback">작성중인 내용이 있어요</string>
    <string name="apply_dialog_goback2">여기서 나갈까요?</string>
    <string name="apply_dialog_out">나가기</string>
    <string name="apply_dialog_continue">계속</string>


    <!-- FCM -->
    <string name="default_notification_channel_id">SeeMeet_Notification_Channel</string>

</resources>