<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.seemeet.seemeet.ui.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.registration.LoginMainActivity">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_img_seemeet_logo_symbol_typo_square" />

        <ImageView
            android:id="@+id/kakao_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            app:srcCompat="@drawable/ic_btn_kakao" />

        <TextView
            android:id="@+id/tv_email_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:fontFamily="@font/spoqa_han_sans_neo_medium"
            android:text="@string/login_main_email_register"
            android:textColor="@color/gray04"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_line"
            app:layout_constraintTop_toBottomOf="@+id/kakao_logo" />

        <TextView
            android:id="@+id/tv_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="|"
            android:textColor="@color/gray02"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_email_register"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_email_login"
            app:layout_constraintTop_toTopOf="@+id/tv_email_register" />

        <TextView
            android:id="@+id/tv_email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:fontFamily="@font/spoqa_han_sans_neo_medium"
            android:text="@string/login_main_email_login_underline"
            android:textColor="@color/gray04"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/tv_line"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_email_register" />

        <TextView
            android:id="@+id/mypage_info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:text="@string/login_main_info1"
            android:textColor="@color/gray05"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mypage_info2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/mypage_info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:text="@string/login_main_info2"
            android:textColor="@color/gray05"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/mypage_info3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mypage_info1"
            app:layout_constraintTop_toTopOf="@+id/mypage_info1" />

        <TextView
            android:id="@+id/mypage_info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:text="@string/login_main_info3"
            android:textColor="@color/gray05"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/mypage_info4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mypage_info2"
            app:layout_constraintTop_toTopOf="@+id/mypage_info2" />

        <TextView
            android:id="@+id/mypage_info4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:text="@string/login_main_info4"
            android:textColor="@color/gray05"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/mypage_info5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mypage_info3"
            app:layout_constraintTop_toTopOf="@+id/mypage_info3" />

        <TextView
            android:id="@+id/mypage_info5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:fontFamily="@font/spoqa_han_sans_neo_regular"
            android:text="@string/login_main_info5"
            android:textColor="@color/gray05"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/mypage_info4"
            app:layout_constraintTop_toTopOf="@+id/mypage_info4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>