<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.LoginActivity">

    <ImageView
        android:id="@+id/iv_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_btn_back" />

    <TextView
        android:id="@+id/tv_register_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:text="@string/register_register"
        android:textColor="#1c1c1c"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_previous" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/register_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_register" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rectangle_gray_radius_20"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/register_id"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_gray_radius_20"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/pw"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/et_id" />

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_gray_radius_20"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/et_id"
        app:layout_constraintStart_toStartOf="@+id/et_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_pw" />

    <TextView
        android:id="@+id/tv_checkpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/register_checkpw"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tv_pw"
        app:layout_constraintTop_toBottomOf="@+id/et_pw" />

    <EditText
        android:id="@+id/et_checkpw"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rectangle_gray_radius_20"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_pw"
        app:layout_constraintStart_toStartOf="@+id/et_pw"
        app:layout_constraintTop_toBottomOf="@+id/tv_checkpw" />

    <View
        android:id="@+id/view_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="#e7e7e7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_checkpw" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rectangle_orange_radius_20"
        android:text="@string/register_register"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="@+id/et_pw"
        app:layout_constraintStart_toStartOf="@+id/et_pw"
        app:layout_constraintTop_toBottomOf="@+id/view_line" />


<!--
    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_centerHorizontal="true"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_register" />
        -->
</androidx.constraintlayout.widget.ConstraintLayout>